UX: fix TOC header in composer preview
The TOC header in the composer preview went behind images on scroll, and had a useless 2px top border which didn't align it properly with the rest of the layout

--- a/common/common.scss
+++ b/common/common.scss
@@ -216,8 +216,8 @@ a.d-toc-close {
 .edit-title .d-editor-preview [data-theme-toc] {
   background: var(--tertiary);
   color: var(--secondary);
-  border-top: 2px solid var(--secondary);
   position: sticky;
+  z-index: 1;
   top: 0;
   height: 30px;
   display: flex;
